<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedeemRewardsActivity">

    <ImageView
        android:id="@+id/img_go_back_redeem"
        android:src="@drawable/go_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/back_button" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_below="@+id/img_go_back_redeem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="8dp">

        <RelativeLayout
            android:background="@drawable/layout_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_money_bag"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:src="@drawable/moneybag"
                android:layout_margin="8dp"
                android:contentDescription="@string/money_bag" />

            <Button
                android:id="@+id/btn_redeem_now"
                android:text="@string/redeem_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_money_bag"
                android:layout_marginBottom="-5dp"/>

            <TextView
                android:id="@+id/txt_quote"
                android:layout_marginTop="8dp"
                android:layout_centerHorizontal="true"
                android:text="@string/yolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_coin_balance"
                android:layout_below="@+id/txt_quote"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:text="@string/ph_coins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_rupee_balance"
                android:layout_below="@+id/txt_coin_balance"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                android:text="@string/ph_rupee_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_below="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="8dp">

        <RelativeLayout
            android:padding="8dp"
            android:background="@drawable/layout_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txt_previous_transactions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous_transactions"
                android:textSize="18sp"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_below="@+id/txt_previous_transactions"
                android:layout_marginTop="8dp"/>


            <RelativeLayout
                android:id="@+id/titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/serial_number"
                    android:text="@string/s_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/coins_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:text="@string/status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_previous_transactions"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/titles"/>

            <TextView
                android:id="@+id/txt_empty_msg"
                android:text="@string/earn_and_redeem"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</RelativeLayout>